syntax = "proto3";

option go_package = "pb/proto_demo";

package proto;

import "request.proto";
import "response.proto";

service Process {
    rpc ProcessRequest(SignedRequest) returns (SignedResponse);
}